--- a/css/news.css
+++ b/css/news.css
@@ -93,6 +93,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 99vw;
 }
 .latest-news{
     width: 60%;
