--- a/css/news.css
+++ b/css/news.css
@@ -87,13 +87,15 @@ body{
     border-bottom: solid 2px #2FCEE7;
     font-size: 20px;
 }
+.slider-container p {
+    cursor: pointer;
+}
 .latest-container-divider{
     height: 230px;
     background-color: #2C3039;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 99vw;
 }
 .latest-news{
     width: 60%;
@@ -116,10 +118,13 @@ body{
     height: 100vh;
     width: 25%;
     margin-top: 5%;
-    border-left: 3px solid black;
+    padding-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0; /* required */
 }
 .news-container{
     width: 100%;
