Changed Project Structure for php

--- a/view/news.html
+++ b/view/news.html
@@ -19,7 +19,7 @@
         <div class="nav-content">
           <a href="./index.html"><h4 class="regular">Home</h4></a>
           <h4 class="selected">News</h4>
-          <a href="./champs.html"><h4 class="regular">Champions</h4></a>
+          <a href="./champs.php"><h4 class="regular">Champions</h4></a>
 
           <h4 class="regular">Shop</h4>
           <a href="./sign-up.html"><h4 class="regular">Sign Up</h4></a>
