--- a/view/css/news.css
+++ b/view/css/news.css
@@ -176,11 +176,18 @@ body{
 
 }
 
-.latest-news-right img{
+.img-type{
     width: 90%;
     height: 25%;
+    border: none !important;
+    padding: 0px !important;
+    background-color: #FFFFFF;
 }
-.latest-news-right img:hover{
+.img-type img{
+    width: 100%;
+    height: 100%;
+}
+.img-type:hover{
     cursor: pointer;
 }
 
