--- a/view/css/news.css
+++ b/view/css/news.css
@@ -120,11 +120,11 @@ body{
     margin-top: 5%;
     padding-top: 5%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     justify-content: center;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0; /* required */
+    position: sticky !important;
+    position: -webkit-sticky !important;
+    top: 0 !important;  /* required */
 }
 .news-container{
     width: 100%;
